services/titan-execution-rs/check_output_3.txt
    Checking titan-execution-rs v0.1.0 (/Users/ivan/Code/trading/titan/services/titan-execution-rs)
warning: unused import: `RiskRejectionReason`
 --> src/api.rs:4:36
  |
4 | use crate::risk_guard::{RiskGuard, RiskRejectionReason};
  |                                    ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `tracing::warn`
 --> src/drift_detector.rs:4:5
  |
4 | use tracing::warn;
  |     ^^^^^^^^^^^^^

warning: unused imports: `Intent` and `Side`
  --> src/nats_engine.rs:12:20
   |
12 | use crate::model::{Intent, IntentType, Side};
   |                    ^^^^^^              ^^^^

warning: unused import: `PipelineResult`
  --> src/nats_engine.rs:20:42
   |
20 | use crate::pipeline::{ExecutionPipeline, PipelineResult};
   |                                          ^^^^^^^^^^^^^^

warning: unused import: `tracing::warn`
 --> src/persistence/redb_store.rs:2:5
  |
2 | use tracing::warn;
  |     ^^^^^^^^^^^^^

warning: unused import: `PipelineResult`
 --> src/replay_engine.rs:6:42
  |
6 | use crate::pipeline::{ExecutionPipeline, PipelineResult};
  |                                          ^^^^^^^^^^^^^^

warning: unused import: `crate::risk_guard::RiskRejectionReason`
 --> src/risk_state_manager.rs:1:5
  |
1 | use crate::risk_guard::RiskRejectionReason;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Deserialize` and `Serialize`
 --> src/risk_state_manager.rs:3:13
  |
3 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^

error[E0599]: no method named `is_reduce_only` found for reference `&RiskGuard` in the current scope
   --> src/risk_guard.rs:188:26
    |
188 |                 if !self.is_reduce_only(intent) {
    |                     -----^^^^^^^^^^^^^^--------
    |                     |    |
    |                     |    this is an associated function, not a method
    |                     help: use associated function syntax instead: `RiskGuard::is_reduce_only(intent)`
    |
    = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
note: the candidate is defined in an impl for the type `RiskGuard`
   --> src/risk_guard.rs:386:5
    |
386 |     fn is_reduce_only(intent: &Intent) -> bool {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `ttl_ms`
  --> src/persistence/redb_store.rs:50:48
   |
50 |     pub fn check_idempotency(&self, key: &str, ttl_ms: i64) -> Result<bool, StoreError> {
   |                                                ^^^^^^ help: if this is intentional, prefix it with an underscore: `_ttl_ms`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `expected_sig`
  --> src/security.rs:94:13
   |
94 |         let expected_sig = hex::encode(expected_bytes);
   |             ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_expected_sig`

For more information about this error, try `rustc --explain E0599`.
warning: `titan-execution-rs` (lib) generated 10 warnings
error: could not compile `titan-execution-rs` (lib) due to 1 previous error; 10 warnings emitted
